--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
 	<meta charset="UTF-8">
 	<title>Pixlee Game Excercise</title>
@@ -8,52 +9,69 @@
 	<link rel="stylesheet" href="stylesheets/main.css">
 	<script src="scripts/vendor/prefixfree.min.js"></script>
 </head>
+
 <body>
-	<div id="startingPage" class="starting-page">
-		<div class="main-title">Proteur</div>
-		<div class="instructions">
-			Create a game where the user’s objective is to correctly guess if a given picture is professionally taken or is user generated content (UGC). We encourage you to use a frontend framework and have fun with the design!
+	<!--Starting Page-->
+	<div id="startingPage" class="jumbotron starting-page">
+		<div class="container">
+			<h1>Proteur</h1>
+			<p>A simple game. Guess if a given picture is professionally taken or is taken by an amateur, just like you.</p>
+			<p>
+				<button id="startGame" type="button" class="btn btn-primary btn-lg">Start Game</button>
+			</p>
 		</div>
-		<button id="startGame" type="button" class="btn btn-primary btn-lg">Start Game</button>
 	</div>
-	<div id="gamePage"  class="game-page">
+	<!--Game Page-->
+	<div id="gamePage" class="game-page">
+		<div id="currentScore" class="current-score">
+			<div class="btn-group">
+				<button class="btn btn-info btn-lg" type="button"> Score: <span class="badge score">0</span> </button>
+				<button class="btn btn-info btn-lg" type="button"> Pictures Remaining: <span class="badge pics-remaining">15</span> </button>
+			</div>
+		</div>
 		<div id="images" class="images"></div>
-		<div id="currentScore" class="current-score"></div>
-		<button id="finishGame" type="button" class="btn btn-primary btn-lg">Start Game</button>
+		<div class="btn-group" role="group" aria-label="...">
+			<button id="proBtn" type="button" class="btn btn-success btn-lg">Professional</button>
+			<button id="amateurBtn" type="button" class="btn btn-primary btn-lg">Amateur</button>
+		</div>
 	</div>
 	<div id="postGameModal" class="modal fade" tabindex="-1" role="dialog">
-  	<div class="modal-dialog post-game-modal" role="document">
+		<div class="modal-dialog post-game-modal" role="document">
 			<div class="modal-content">
 				<div class="modal-header">
-					<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-					<h4 class="modal-title">Thanks for playing!</h4>
-				</div>
+					<h4 class="modal-title">Thanks for playing!</h4> </div>
 				<div class="modal-body">
-					<form>
+					<form id="submissionForm">
 						<div class="form-group">
 							<label for="playerName">Name</label>
-							<input type="text" class="form-control" id="playerName" placeholder="Your Name">
-						</div>
+							<input type="text" class="form-control" id="playerName" placeholder="Your Name"> </div>
 						<div class="form-group">
 							<label for="playerEmail">Email address</label>
-							<input type="email" class="form-control" id="playerEmail" placeholder="Your Email">
+							<input type="email" class="form-control" id="playerEmail" placeholder="Your Email"> </div>
+						<div class="btn-group btn-group-justified">
+							<div class="btn-group">
+								<button id="playAgain" type="submit" class="btn btn-success" data-dismiss="modal" data-dismiss="modal">Submit and Play Again</button>
+							</div>
+							<div class="btn-group">
+								<button id="quit" type="submit" class="btn btn-primary" data-dismiss="modal">Submit and Quit</button>
+							</div>
 						</div>
 					</form>
 				</div>
-				<div class="modal-footer">
-					<button id="playAgain" type="button" class="btn btn-success" data-dismiss="modal" data-dismiss="modal">Submit and Play Again</button>
-					<button id="quit" type="button" class="btn btn-primary" data-dismiss="modal">Submit and Quit</button>
-				</div>
-			</div><!-- /.modal-content -->
-  </div><!-- /.modal-dialog -->
-</div><!-- /.modal -->
-	<div id="postGamePage" class="post-game-page">
-		Post Game Page
+			</div>
+			<!-- /.modal-content -->
+		</div>
+		<!-- /.modal-dialog -->
+	</div>
+	<!-- /.modal -->
+	<div id="postGamePage" class="post-game-page"> Post Game Page
 		<div id="finalScore" class="final-score"></div>
 		<button id="submitInfo" type="button" class="btn btn-primary btn-lg">Start Game</button>
 	</div>
-	<script   src="scripts/vendor/jquery-1.12.4.min.js"   integrity="sha256-ZosEbRLbNQzLpnKIkEdrPv7lOy9C27hHQ+Xp8a4MxAQ="   crossorigin="anonymous"></script>
+	<div id="leaderBoard"></div>
+	<script src="scripts/vendor/jquery-1.12.4.min.js" integrity="sha256-ZosEbRLbNQzLpnKIkEdrPv7lOy9C27hHQ+Xp8a4MxAQ=" crossorigin="anonymous"></script>
 	<script src="scripts/vendor/bootstrap.js"></script>
 	<script src="scripts/main.js"></script>
 </body>
+
 </html>
